--- a/packages/react-native-bridge/android/build.gradle
+++ b/packages/react-native-bridge/android/build.gradle
@@ -109,7 +109,7 @@ repositories {
 
     if (rootProject.ext.buildGutenbergFromSource) {
         // If building from source, use the local sources from node_modules
-        def nodeModulesPath = "${project.buildDir}/../../../node_modules/"
+        def nodeModulesPath = "${project.buildDir}/../../../../react-native-editor/node_modules/"
         maven { url "${nodeModulesPath}/react-native/android" }
     } else {
         // If not building from source (e.g. Jitpack), use the bintray repo so a local RN setup is not needed
@@ -120,7 +120,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':react-native-aztec')
+    implementation project(':@wordpress_react-native-aztec')
 
     implementation "org.wordpress:utils:1.22"
 
