--- a/packages/react-native-editor/android/app/build.gradle
+++ b/packages/react-native-editor/android/app/build.gradle
@@ -159,8 +159,8 @@ dependencies {
     implementation project(':@react-native-community_slider')
     implementation project(':react-native-video')
     implementation project(':react-native-svg')
-    implementation project(':react-native-aztec')
-    implementation project(':react-native-gutenberg-bridge')
+    implementation project(':@wordpress_react-native-aztec')
+    implementation project(':@wordpress_react-native-bridge')
     implementation "org.wordpress:utils:$wordpressUtilsVersion"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
